fixed type: scrollbars should now be hidden when changing tabs (#1096)
svn changeset:2751/svn branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/tabsheet/tabsheet.css
@@ -123,10 +123,6 @@
 }
 
 /* IE specific styles */
-.i-tabsheet-loading .i-tabsheet-content * {
-	visibility: hidden;
-	oveflow: hidden;
-}
 * html .i-tabsheet-content {
 	border-bottom: 1px solid #babfc0;
 }
